fixing post title (:)

--- a/_posts/2024-08-28-mcmc.md
+++ b/_posts/2024-08-28-mcmc.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: Introduction to MCMC methods: From importance sampling to advanced algorithms
+title: "Introduction to MCMC methods: From importance sampling to advanced algorithms"
 description: 
 tags: [MCMC]
 date: 2024-08-28
