--- a/_posts/2024-08-28-mcmc.md
+++ b/_posts/2024-08-28-mcmc.md
@@ -4,7 +4,7 @@ title: "Introduction to MCMC methods: From importance sampling to advanced algor
 description: 
 tags: [MCMC]
 date: 2024-08-28
-featured: true
+featured: false
 mermaid:
   enabled: true
   zoomable: true
@@ -133,7 +133,7 @@ $$
 
 **Pseudocode:**
 
-```perl
+```text
 For i = 1 to N:
     Sample x_i ~ q(x)
     Compute weight w_i = π(x_i) / q(x_i)
@@ -152,19 +152,19 @@ $\pi(x) P(x \to x') = \pi(x') P(x' \to x)$
 
 In MH, the transition probability is given by:
 
-$P(x \to x') = q(x'|x) \alpha(x, x')$
+$$P(x \to x') = q(x'|x) \alpha(x, x')$$
 
 where $\alpha(x, x')$ is the acceptance probability. To satisfy detailed balance, we require:
 
-$\pi(x) q(x'|x) \alpha(x, x') = \pi(x') q(x|x') \alpha(x', x)$
+$$\pi(x) q(x'|x) \alpha(x, x') = \pi(x') q(x|x') \alpha(x', x)$$
 
 A common and effective choice is to define $\alpha(x, x')$ as:
 
-$\alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}$
+$$\alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}$$
 
 When $\pi(x') q(x|x') \geq \pi(x) q(x'|x)$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted 
 
-with probability $\frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}$.
+with probability $$\frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}$$.
 
 **Convergence and ergodicity**
 
@@ -177,6 +177,7 @@ $$
 **Practical considerations**
 
 - **Choice of Proposal $q(x'|x)$ :** The efficiency of the MH algorithm heavily depends on how well the proposal distribution explores the state space. If $q(x'|x)$ is too narrow, the chain will explore slowly, if too wide, the acceptance rate may drop.
+
 - **Symmetric Proposals:** When $q(x'|x) = q(x|x')$ (as in a Gaussian random walk), the acceptance probability simplifies to:
 
 $$
@@ -185,7 +186,7 @@ $$
 
 **Algorithm & Pseudocode:**
 
-```mathematica
+```text
 Initialize x₀
 For t = 0 to N - 1:
     Propose x' ~ q(x'|x_t)
@@ -251,7 +252,7 @@ Gibbs sampling inherits the convergence properties of Markov chains. Provided th
 
 **Pseudocode:**
 
-```mathematica
+```text
 Initialize x = (x₁, x₂, …, x_d)
 For t = 0 to N - 1:
     For i = 1 to d:
@@ -312,7 +313,7 @@ This step ensures that the overall transition kernel satisfies detailed balance 
 
 **Pseudocode:**
 
-```perl
+```text
 Initialize x₀
 For t = 0 to N - 1:
     Sample momentum p ~ N(0, M)
@@ -378,7 +379,7 @@ $$
 
 **Pseudocode:**
 
-```perl
+```text
 Initialize x₀
 For t = 0 to N - 1:
     Compute gradient g = ∇ log π(x_t)
