--- a/_posts/2024-08-28-mcmc.md
+++ b/_posts/2024-08-28-mcmc.md
@@ -162,9 +162,11 @@ A common and effective choice is to define $\alpha(x, x')$ as:
 
 $$\alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}$$
 
-When $\pi(x') q(x|x') \geq \pi(x) q(x'|x)$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted 
+When $$\pi(x') q(x|x') \geq \pi(x) q(x'|x)$$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted 
 
-with probability $$\frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}$$.
+with probability 
+
+$$\frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}$$.
 
 **Convergence and ergodicity**
 
@@ -180,9 +182,9 @@ $$
 
 - **Symmetric Proposals:** When $q(x'|x) = q(x|x')$ (as in a Gaussian random walk), the acceptance probability simplifies to:
 
-$$
-\alpha(x, x') = \min\left\{1, \frac{\pi(x')}{\pi(x)}\right\}
-$$
+    $$
+    \alpha(x, x') = \min\left\{1, \frac{\pi(x')}{\pi(x)}\right\}
+    $$
 
 **Algorithm & Pseudocode:**
 
@@ -398,7 +400,7 @@ These implementations can be tweaked and used for solving real world problems.
 
 Here is a link to a Github repository where you can find the full implementations with some nice visualizations:
 
-https://github.com/Nizben/mcmc
+[MCMC](https://github.com/Nizben/mcmc)
 
 ### 4.1. Bayesian Linear Regression (via Gibbs Sampling)
 
