--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -6,6 +6,7 @@ tags: distill formatting
 giscus_comments: true
 date: 2021-05-22
 featured: false
+published: false
 mermaid:
   enabled: true
   zoomable: true
