--- a/_posts/2024-08-28-mcmc.md
+++ b/_posts/2024-08-28-mcmc.md
@@ -145,7 +145,6 @@ Estimate I ≈ (Σ f(x_i) w_i) / (Σ w_i)
 **Context & Objective:**
 
 MH constructs a Markov chain whose stationary distribution is $\pi(x)$. It proposes moves using a proposal density $q(x'|x)$ and accepts these moves with a carefully designed acceptance probability.
-
 The key idea is to design the transition probability $P(x \to x')$ so that the target distribution is invariant. A sufficient condition is **detailed balance**, which states that for all states $x$ and $x'$:
 
 $\pi(x) P(x \to x') = \pi(x') P(x' \to x)$
@@ -162,9 +161,7 @@ A common and effective choice is to define $\alpha(x, x')$ as:
 
 $$\alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}$$
 
-When $$\pi(x') q(x|x') \geq \pi(x) q(x'|x)$$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted 
-
-with probability 
+When $\pi(x') q(x|x') \geq \pi(x) q(x'|x)$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted with probability:
 
 $$\frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}$$.
 
