--- a/_posts/2024-08-28-mcmc.md
+++ b/_posts/2024-08-28-mcmc.md
@@ -159,11 +159,15 @@ $$\pi(x) q(x'|x) \alpha(x, x') = \pi(x') q(x|x') \alpha(x', x)$$
 
 A common and effective choice is to define $\alpha(x, x')$ as:
 
-$$\alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}$$
+$$
+\alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}
+$$
 
 When $\pi(x') q(x|x') \geq \pi(x) q(x'|x)$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted with probability:
 
-$$\frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}$$.
+$$
+\frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}
+$$
 
 **Convergence and ergodicity**
 
@@ -176,7 +180,6 @@ $$
 **Practical considerations**
 
 - **Choice of Proposal $q(x'|x)$ :** The efficiency of the MH algorithm heavily depends on how well the proposal distribution explores the state space. If $q(x'|x)$ is too narrow, the chain will explore slowly, if too wide, the acceptance rate may drop.
-
 - **Symmetric Proposals:** When $q(x'|x) = q(x|x')$ (as in a Gaussian random walk), the acceptance probability simplifies to:
 
     $$
