--- a/_posts/2024-08-28-mcmc.md
+++ b/_posts/2024-08-28-mcmc.md
@@ -163,7 +163,7 @@ $$
 \alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}
 $$
 
-When $\pi(x') q(x|x') \geq \pi(x) q(x'|x)$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted with probability:
+When $\pi(x') q(x|x')$ $\geq$ $\pi(x) q(x'|x)$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted with probability:
 
 $$
 \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}
@@ -181,10 +181,9 @@ $$
 
 - **Choice of Proposal $q(x'|x)$ :** The efficiency of the MH algorithm heavily depends on how well the proposal distribution explores the state space. If $q(x'|x)$ is too narrow, the chain will explore slowly, if too wide, the acceptance rate may drop.
 - **Symmetric Proposals:** When $q(x'|x) = q(x|x')$ (as in a Gaussian random walk), the acceptance probability simplifies to:
-
-    $$
-    \alpha(x, x') = \min\left\{1, \frac{\pi(x')}{\pi(x)}\right\}
-    $$
+$$
+\alpha(x, x') = \min\left\{1, \frac{\pi(x')}{\pi(x)}\right\}
+$$
 
 **Algorithm & Pseudocode:**
 
