--- a/_posts/2024-09-08-mcmc.md
+++ b/_posts/2024-09-08-mcmc.md
@@ -3,7 +3,7 @@ layout: distill
 title: "Introduction to MCMC methods: From importance sampling to advanced algorithms"
 description: 
 tags: [MCMC]
-date: 2024-08-28
+date: 2024-09-08
 featured: false
 mermaid:
   enabled: true
@@ -163,7 +163,7 @@ $$
 \alpha(x, x') = \min\left\{1, \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}\right\}
 $$
 
-When $\pi(x') q(x|x')$ $\geq$ $\pi(x) q(x'|x)$, we have $\alpha(x, x') = 1$; otherwise, the move is accepted with probability:
+When $$\pi(x')q(x|x') \geq \pi(x)q(x'|x)$$, we have $\alpha(x, x') = 1$, otherwise, the move is accepted with probability:
 
 $$
 \frac{\pi(x') \, q(x|x')}{\pi(x) \, q(x'|x)}
@@ -177,9 +177,9 @@ $$
 \frac{1}{N}\sum_{t=1}^{N} f(x_t) \longrightarrow \mathbb{E}_{\pi}[f(x)] \quad \text{as } N \to \infty
 $$
 
-**Practical considerations**
+**Practical considerations:**
 
-- **Choice of Proposal $q(x'|x)$ :** The efficiency of the MH algorithm heavily depends on how well the proposal distribution explores the state space. If $q(x'|x)$ is too narrow, the chain will explore slowly, if too wide, the acceptance rate may drop.
+- **Choice of Proposal:** The efficiency of the MH algorithm heavily depends on how well the proposal distribution explores the state space. If $q(x'|x)$ is too narrow, the chain will explore slowly, if too wide, the acceptance rate may drop.
 - **Symmetric Proposals:** When $q(x'|x) = q(x|x')$ (as in a Gaussian random walk), the acceptance probability simplifies to:
 $$
 \alpha(x, x') = \min\left\{1, \frac{\pi(x')}{\pi(x)}\right\}
