--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,17 +20,13 @@
   preview={brownian-motion.gif}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{neurreps2025curvature,
+  abbr={NeurReps2025},
   bibtex_show={true},
-  title={The meaning of relativity},
+  title={Curvature Aware Pulling on Riemannian Manifolds},
   author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  journal={NeurReps 2025 workshop},
+  year={2025}
 }
 
 @article{PhysRev.47.777,
