--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,3 +12,16 @@
   preview={neureps_image.png},
   year={2025}
 }
+
+
+@article{negel2025glass,
+  abbr={NEGEL 2025},
+  bibtex_show={true},
+  title={GLASS: A Differentiable Geometric Alignment Layer on Manifolds and Graphs via Learned Slices and Soft Optimal Transport},
+  author={Nizar Benbouchta},
+  journal={The Non-Euclidean Foundation Models and Geometric Learning workshop, NeurIPS conference},
+  html={https://openreview.net/pdf?id=Z0YyuQNrzg},
+  website={https://hyperboliclearning.github.io/events/neurips2025negelworkshop},
+  preview={negel_image.png},
+  year={2025}
+}
