fixing cap title

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @article{neurreps2025curvature,
   abbr={NeurReps 2025},
   bibtex_show={true},
-  title={CAP\(_{\mathcal{M}}\): Curvature-Aware Pulling on Riemannian Manifolds},
+  title={CAP<sub>𝓜</sub>: Curvature-Aware Pulling on Riemannian Manifolds},
   author={Nizar Benbouchta},
   journal={Symmetry and Geometry  in  Neural Representations workshop, NeurIPS conference},
   html={https://openreview.net/pdf?id=vSkYgUMYcZ},
